logs/nsnitro.log
Listing '.'...
Listing './bin'...
Compiling './bin/nsnitrocmd.py'...
***   File "./bin/nsnitrocmd.py", line 78
    print "--- %s: %s ---" % (args.object, object.get_name())
                         ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/nsnitro'...
Listing './lib/python3.5/site-packages/nsnitro/nsexceptions'...
Compiling './lib/python3.5/site-packages/nsnitro/nsnitro.py'...
***   File "./lib/python3.5/site-packages/nsnitro/nsnitro.py", line 67
    except urllib2.URLError, ue:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nsnitro/nsresources'...
Compiling './lib/python3.5/site-packages/nsnitro/nsresources/nscsvserverstat.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (nscsvserverstat.py, line 53)
Listing './lib/python3.5/site-packages/nsnitro-1.0.35.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
